--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     --color-background: #FFFFFF;
     --color-background-text: #EBF5FE;
     --color-background-contact-button: #FFFFFF;
+    --color-background-landing-page: #FFFFFF;
+    --color-background-about-page: #FFFFFF;
+    --color-background-find-page: #FFFFFF;
+    --color-background-contact-page: #FFFFFF;
 
     /* Light primary/secondary etc. colors */
     --color-primary-900: #2D4F9F;
@@ -17,6 +21,10 @@
 
     /* Light component colors */
     --color-arrow: #7C7E82; /* 4.06 contrast against FFF */
+
+    /* Light colors */
+    --color-white: #FFFFFF;
+    --color-black: #212121;
 }
 
 /* Dark mode colors */
@@ -53,6 +61,10 @@ h2 {
     margin: 0;
 }
 
+h3 {
+    margin: 0;
+}
+
 
 /* CLASS STYLING */
 
@@ -64,13 +76,17 @@ h2 {
     max-width: 150rem;
 }
 
+.full-page-background {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+}
+
 .layout {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 6.4rem;
-    justify-items: stretch;
     align-items: center;
-    justify-content: center;
 }
 
 .align-start {
@@ -102,12 +118,34 @@ h2 {
     justify-self: end;
 }
 
+.contact-subheading {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+}
+
+.column-gap-large {
+    column-gap: 6.4rem;
+}
+
+.column-gap-very-large {
+    column-gap: 12.8rem;
+}
+
+.margin-top-none {
+    margin-top: 0;
+}
+
 .margin-right-small {
     margin-right: 1.6rem;
 }
 
 .margin-right-medium {
     margin-right: 3.2rem;
+}
+
+.margin-bottom-none {
+    margin-bottom: 0;
 }
 
 .margin-bottom-medium {
@@ -124,6 +162,14 @@ h2 {
 
 .margin-bottom-logo {
     margin-bottom: 18rem;
+}
+
+.border-radius-medium {
+    border-radius: 20px;
+}
+
+.inline {
+    display: inline;
 }
 
 /* Text styles */
@@ -152,12 +198,25 @@ h2 {
     font-size: 2rem;
     font-weight: 400;
     line-height: 1.5;
-    margin: 0;
 }
 
 .nav-link {
     font-weight: 600;
     text-transform: uppercase;
+}
+
+.find-card-section-heading {
+    font-family: "IBM Plex Sans", Arial;
+    font-size: 2rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    border-bottom: 3px solid var(--color-black);
+}
+
+.find-card-section-info {
+    font-family: "IBM Plex Mono", Arial;
+    font-size: 2rem;
+    font-weight: 400;
 }
 
 /* Component styles */
@@ -193,11 +252,44 @@ h2 {
     transition: box-shadow 0.2s ease, transform 0.2s ease;
 }
 
+.to-top-button {
+    position: fixed;
+    bottom: 3.2rem;
+    right: 3.2rem;
+    height: 10rem;
+    width: 10rem;
+    font-family: "IBM Plex Sans", Arial;
+    font-size: 1.8rem;
+    font-weight: 700;
+    background-color: var(--color-background);
+    color: var(--color-text-primary);
+    border: 4px solid var(--color-primary-900);
+    border-radius: 50%;
+}
+
 .text-box {
+    box-sizing: border-box;
     background-color: var(--color-background-text);
     border-radius: 20px;
     padding: 3.2rem;
     text-align: left;
+}
+
+.find-card {
+    background-color: var(--color-background-text);
+    border-radius: 20px;
+    padding: 3.2rem;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: start;
+    justify-content: center;
+}
+
+.img-card {
+    border: 4px solid var(--color-black);
+    box-shadow:  0px 2px 1px -1px rgba(0, 0, 0, 0.2), /* 1dp - umbra */
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), /* 1dp - penumbra */
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12); /* 1dp - ambient */
 }
 
 .landing-graphic {
@@ -216,6 +308,24 @@ h2 {
     text-transform: uppercase;
 }
 
+.about-background-color {
+    background-color: var(--color-background-about-page);
+}
+
+.find-background-color {
+    background-color: var(--color-background-find-page);
+}
+
+.contact-background-color {
+    background-color: var(--color-background-contact-page);
+}
+
+/* UTILITY STYLES */
+
+.hide {
+    display: none;
+}
+
 /* ID STYLING */
 
 #main-div {
@@ -228,4 +338,7 @@ h2 {
 }
 
 #landing-page {
+}
+
+#about-page {
 }
