--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
 
     /* Light component colors */
     --color-arrow: #7C7E82; /* 4.06 contrast against FFF */
+    --color-arrow-hovered: #7c7e82b4;
 
     /* Light colors */
     --color-white: #FFFFFF;
@@ -102,7 +103,7 @@ a:hover::after {
 }
 
 .navbar-div {
-    width: 100vw;
+    width: 100%;
     background-color: var(--color-black);
     margin-bottom: 12.8rem;
 }
@@ -114,7 +115,7 @@ a:hover::after {
 }
 
 .full-page-background {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -379,10 +380,31 @@ a:hover::after {
 
 .footer {
     background-color: var(--color-background-footer);
-    width: 100vw;
+    width: 100%;
     color: var(--color-text-primary);
     padding: 1.6rem 0;
     text-align: center;
+}
+
+.continue-icon {
+    position: fixed;
+    bottom: 3.2rem;
+    transition: transform 0.2s ease;
+}
+
+.continue-arrow {
+    stroke: var(--color-arrow);
+    transform: stroke 0.2s ease;
+}
+
+.continue-icon:hover {
+    transform: scale(1.1);
+    transition: transform 0.2s ease;
+}
+
+.continue-icon:hover .continue-arrow {
+    stroke: var(--color-arrow-hovered);
+    transform: stroke 0.2s ease;
 }
 
 /* UTILITY STYLES */
@@ -419,5 +441,37 @@ a:hover::after {
 @media screen and (max-width: 900px) {
     #landing-page {
         background-color: red;
+    }
+
+    p {
+        font-size: 1.8rem;
+    }
+
+    .section-heading {
+        font-size: 5rem;
+    }
+
+    .section-subheading {
+        font-size: 2.5rem;
+    }
+
+    .normal-text {
+        font-size: 1.8rem;
+    }
+
+    .logo {
+        font-size: 1.8rem;
+    }
+
+    .contact-button {
+        font-size: 1.8rem;
+    }
+
+    .find-card-section-heading {
+        font-size: 1.8rem;
+    }
+
+    .find-card-section-info {
+        font-size: 1.8rem;
     }
 }
