--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     --color-background-find-page: #FFFFFF;
     --color-background-contact-page: #FFFFFF;
     --color-background-footer: #FFFFFF;
+    --color-background-contact-button-active: #e5f3fd;
 
     /* Light primary/secondary etc. colors */
     --color-primary-900: #2D4F9F;
@@ -18,6 +19,8 @@
     --color-primary-600: #4490E4;
     --color-primary-300: #76BCF6;
     --color-primary-200: #9ACFF9;
+
+    --color-secondary-900: #0D620B;
 
     /* Light text colors */
     --color-text-primary: #232A3A; /* 14.34 contrast against FFF */
@@ -73,21 +76,7 @@ h3 {
 }
 
 a {
-    color: var(--color-text-white);
     text-decoration: none;
-}
-
-a::after {
-    content: '';
-    display: block;
-    width: 0;
-    height: 3px;
-    background: var(--color-primary-200);
-    transition: width 0.5s;
-}
-
-a:hover::after {
-    width: 100%;
 }
 
 /* CLASS STYLING */
@@ -255,8 +244,22 @@ a:hover::after {
 }
 
 .nav-link {
+    color: var(--color-text-white);
     font-weight: 600;
     text-transform: uppercase;
+}
+
+.nav-link::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 3px;
+    background: var(--color-primary-200);
+    transition: width 0.5s;
+}
+
+.nav-link:hover::after {
+    width: 100%;
 }
 
 .find-card-section-heading {
@@ -268,9 +271,22 @@ a:hover::after {
 }
 
 .find-card-section-info {
-    font-family: "IBM Plex Mono", Arial;
+    font-family: "IBM Plex Sans", Arial;
     font-size: 2rem;
     font-weight: 400;
+}
+
+.address-link {
+    color: var(--color-text-primary);
+    border-bottom: 2px solid var(--color-primary-900);
+}
+
+.personal-page-link {
+    color: var(--color-primary-900);
+}
+
+.personal-page-link:visited {
+    color: var(--color-primary-900);
 }
 
 /* Component styles */
@@ -299,7 +315,8 @@ a:hover::after {
     box-shadow:  0px 3px 1px -2px rgba(0, 0, 0, 0.2), /*  2dp - umbra */
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), /* 2dp - penumbra */
     0px 1px 5px 0px rgba(0, 0, 0, 0.12); /* 2dp - ambient */
-    transition: box-shadow 0.2s ease, transform 0.2s ease;
+    transition: box-shadow 0.2s ease, transform 0.2s ease, 
+                background-color 0.2s ease;
 }
 
 .contact-button:hover {
@@ -307,7 +324,15 @@ a:hover::after {
     box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), /* 8dp - umbra */
     0px 8px 10px 1px rgba(0, 0, 0, 0.14), /* 8dp - penumbra */
     0px 3px 14px 2px rgba(0, 0, 0, 0.12); /* 8dp - ambient */
-    transition: box-shadow 0.2s ease, transform 0.2s ease;
+    transition: box-shadow 0.2s ease, transform 0.2s ease, 
+                background-color 0.2s ease;
+}
+
+.contact-button:active {
+    box-shadow: none;
+    outline: none;
+    background-color: var(--color-background-contact-button-active);
+    transition: box-shadow 0.2s ease, background-color 0.2s ease;
 }
 
 .to-top-button {
