--- a/style.css
+++ b/style.css
@@ -116,6 +116,20 @@ a {
     align-items: center;
 }
 
+.diseases-layout {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+}
+
+.disease-div {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 6.4rem;
+    row-gap: 6.4rem;
+}
+
 .align-start {
     align-items: start;
 }
@@ -151,6 +165,14 @@ a {
     align-items: center;
 }
 
+.column-gap-small {
+    column-gap: 1.6rem;
+}
+
+.column-gap-medium {
+    column-gap: 3.2rem;
+}
+
 .column-gap-large {
     column-gap: 6.4rem;
 }
@@ -171,8 +193,20 @@ a {
     margin-right: 3.2rem;
 }
 
+.margin-right-large {
+    margin-right: 6.4rem;
+}
+
 .margin-bottom-none {
     margin-bottom: 0;
+}
+
+.margin-bottom-very-small {
+    margin-bottom: 0.8rem;
+}
+
+.margin-bottom-small {
+    margin-bottom: 1.6rem;
 }
 
 .margin-bottom-medium {
@@ -289,6 +323,20 @@ a {
     color: var(--color-primary-900);
 }
 
+.disease-heading {
+    font-family: "IBM Plex Sans", Arial;
+    font-size: 2rem;
+    font-weight: 600;
+    color: var(--color-text-primary);
+}
+
+.disease-text {
+    font-family: "IBM Plex Sans", Arial;
+    font-size: 1.8rem;
+    font-weight: 400;
+    color: var(--color-text-primary);
+}
+
 /* Component styles */
 
 .no-bottom-border:hover::after {
@@ -350,6 +398,37 @@ a {
     border-radius: 50%;
 }
 
+.disease-button {
+    font-family: "IBM Plex Sans", Arial;
+    font-size: 2rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: var(--color-text-white);
+    background-color: var(--color-primary-900);
+    padding: 1.6rem 3.2rem;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    box-shadow:  0px 3px 1px -2px rgba(0, 0, 0, 0.2), /*  2dp - umbra */
+    0px 2px 2px 0px rgba(0, 0, 0, 0.14), /* 2dp - penumbra */
+    0px 1px 5px 0px rgba(0, 0, 0, 0.12); /* 2dp - ambient */
+    transition: box-shadow 0.2s ease, transform 0.2s ease;
+}
+
+.disease-button:hover {
+    transform: translateY(-8px);
+    box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), /* 8dp - umbra */
+    0px 8px 10px 1px rgba(0, 0, 0, 0.14), /* 8dp - penumbra */
+    0px 3px 14px 2px rgba(0, 0, 0, 0.12); /* 8dp - ambient */
+    transition: box-shadow 0.2s ease, transform 0.2s ease;
+}
+
+.disease-button:active {
+    box-shadow: none;
+    outline: none;
+    transition: box-shadow 0.2s ease;
+}
+
 .text-box {
     box-sizing: border-box;
     background-color: var(--color-background-text);
@@ -373,6 +452,19 @@ a {
     box-shadow:  0px 2px 1px -1px rgba(0, 0, 0, 0.2), /* 1dp - umbra */
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), /* 1dp - penumbra */
     0px 1px 3px 0px rgba(0, 0, 0, 0.12); /* 1dp - ambient */
+}
+
+.disease-card {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background-color: var(--color-background-text);
+    border-radius: 20px;
+    box-shadow:  0px 2px 1px -1px rgba(0, 0, 0, 0.2), /* 1dp - umbra */
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), /* 1dp - penumbra */
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12); /* 1dp - ambient */
+    padding: 3.2rem;
 }
 
 .landing-graphic {
