--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     --color-background-about-page: #FFFFFF;
     --color-background-find-page: #FFFFFF;
     --color-background-contact-page: #FFFFFF;
+    --color-background-diseases-page: #FFFFFF;
     --color-background-footer: #FFFFFF;
     --color-background-contact-button-active: #e5f3fd;
 
@@ -59,7 +60,7 @@ img {
 }
 
 p {
-    font-family: "IBM Plex Sans", Arial;
+    font-family: "Source Sans Pro", Arial;
     font-size: 2rem;
 }
 
@@ -88,7 +89,8 @@ a {
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
-    width: 85vw;
+    width: 80%;
+    max-width: 150rem;
 }
 
 .navbar-div {
@@ -98,14 +100,12 @@ a {
 }
 
 .full-page {
-    width: 85vw;
-    height: 100vh;
+    width: 80%;
     max-width: 150rem;
 }
 
 .full-page-background {
     width: 100%;
-    height: 100vh;
     display: flex;
     justify-content: center;
 }
@@ -114,6 +114,10 @@ a {
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
+}
+
+.full-height {
+    height: 100vh;
 }
 
 .diseases-layout {
@@ -128,6 +132,7 @@ a {
     grid-template-columns: 1fr 1fr;
     column-gap: 6.4rem;
     row-gap: 6.4rem;
+    position: relative;
 }
 
 .align-start {
@@ -221,6 +226,10 @@ a {
     margin-bottom: 12.8rem;
 }
 
+.margin-bottom-massive {
+    margin-bottom: 25.6rem;
+}
+
 .margin-bottom-logo {
     margin-bottom: 18rem;
 }
@@ -252,14 +261,14 @@ a {
 /* Text styles */
 
 .section-heading {
-    font-family: "IBM Plex Serif";
+    font-family: "Source Serif Pro";
     font-size: 6.4rem;
     font-weight: 400;
     color: var(--color-text-primary);
 }
 
 .section-subheading {
-    font-family: "IBM Plex Sans";
+    font-family: "Source Sans Pro";
     font-size: 3rem;
     font-weight: 400;
     color: var(--color-text-secondary);
@@ -268,10 +277,11 @@ a {
 .title {
     font-weight: 700;
     text-transform: uppercase;
+    letter-spacing: 0.08em;
 }
 
 .normal-text {
-    font-family: "IBM Plex Sans", Arial;
+    font-family: "Source Sans Pro", Arial;
     font-size: 2rem;
     font-weight: 400;
     line-height: 1.5;
@@ -281,6 +291,7 @@ a {
     color: var(--color-text-white);
     font-weight: 600;
     text-transform: uppercase;
+    letter-spacing: 0.05em;
 }
 
 .nav-link::after {
@@ -297,7 +308,7 @@ a {
 }
 
 .find-card-section-heading {
-    font-family: "IBM Plex Sans", Arial;
+    font-family: "Source Sans Pro", Arial;
     font-size: 2rem;
     font-weight: 500;
     text-transform: uppercase;
@@ -305,7 +316,7 @@ a {
 }
 
 .find-card-section-info {
-    font-family: "IBM Plex Sans", Arial;
+    font-family: "Source Sans Pro", Arial;
     font-size: 2rem;
     font-weight: 400;
 }
@@ -324,15 +335,17 @@ a {
 }
 
 .disease-heading {
-    font-family: "IBM Plex Sans", Arial;
-    font-size: 2rem;
+    font-family: "Source Sans Pro", Arial;
+    font-size: 1.8rem;
     font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
     color: var(--color-text-primary);
 }
 
 .disease-text {
-    font-family: "IBM Plex Sans", Arial;
-    font-size: 1.8rem;
+    font-family: "Source Sans Pro", Arial;
+    font-size: 2rem;
     font-weight: 400;
     color: var(--color-text-primary);
 }
@@ -351,10 +364,11 @@ a {
 }
 
 .contact-button {
-    font-family: "IBM Plex Sans";
+    font-family: "Source Sans Pro";
     font-size: 2rem;
     font-weight: 700;
     text-transform: uppercase;
+    letter-spacing: 0.05em;
     color: var(--color-primary-900);
     background-color: var(--color-background-contact-button);
     border: 4px solid var(--color-primary-900);
@@ -389,7 +403,7 @@ a {
     right: 3.2rem;
     height: 10rem;
     width: 10rem;
-    font-family: "IBM Plex Sans", Arial;
+    font-family: "Source Sans Pro", Arial;
     font-size: 1.8rem;
     font-weight: 700;
     background-color: var(--color-background);
@@ -399,14 +413,16 @@ a {
 }
 
 .disease-button {
-    font-family: "IBM Plex Sans", Arial;
+    font-family: "Source Sans Pro", Arial;
     font-size: 2rem;
     font-weight: 600;
     text-transform: uppercase;
-    color: var(--color-text-white);
-    background-color: var(--color-primary-900);
+    letter-spacing: 0.05em;
+    color: var(--color-primary-900);
+    background-color: var(--color-background-contact-button);
+    border: 4px solid var(--color-primary-900);
+    border-radius: 5px;
     padding: 1.6rem 3.2rem;
-    border: none;
     outline: none;
     border-radius: 5px;
     box-shadow:  0px 3px 1px -2px rgba(0, 0, 0, 0.2), /*  2dp - umbra */
@@ -476,11 +492,12 @@ a {
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
-    font-family: "IBM Plex Sans", Arial;
+    font-family: "Source Sans Pro", Arial;
     font-size: 2rem;
     font-weight: 400;
     color: var(--color-text-white);
     text-transform: uppercase;
+    letter-spacing: 0.08em;
 }
 
 .about-background-color {
@@ -493,6 +510,22 @@ a {
 
 .contact-background-color {
     background-color: var(--color-background-contact-page);
+}
+
+.diseases-background-color {
+    background-color: var(--color-background-diseases-page);
+}
+
+.diseases-graphic-top-right {
+    position: absolute;
+    right: -10rem;
+    top: -20rem;
+}
+
+.diseases-graphic-bottom-left {
+    position: absolute;
+    left: -8rem;
+    bottom: 2rem;
 }
 
 .footer {
@@ -553,9 +586,23 @@ a {
 }
 
 
-/* Styling for mobile screens */
+/* Styling for slightly narrower screens */
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1400px) {
+    .full-page {
+        width: 90%;
+    }
+
+    .navbar {
+        width: 90%;
+    }
+
+}
+
+
+/* Styling for narrow screens */
+
+@media screen and (max-width: 1100px) {
     #landing-page {
         background-color: red;
     }
@@ -590,5 +637,32 @@ a {
 
     .find-card-section-info {
         font-size: 1.8rem;
+    }
+
+    .disease-heading {
+        font-size: 1.8rem;
+    }
+
+    .disease-text {
+        font-size: 1.6rem;
+    }
+
+    .disease-button {
+        font-size: 1.8rem;
+    }
+}
+
+
+/* Styling for mobile screens */
+
+@media screen and (max-width: 950px) {
+    #landing-page {
+        background-color: green;
+    }
+
+    .layout {
+        grid-template-columns: 1fr;
+        justify-items: center;
+        align-items: end;
     }
 }
