--- a/style.css
+++ b/style.css
@@ -337,7 +337,7 @@ a {
 .disease-heading {
     font-family: "Source Sans Pro", Arial;
     font-size: 1.8rem;
-    font-weight: 600;
+    font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 0.05em;
     color: var(--color-text-primary);
@@ -347,6 +347,7 @@ a {
     font-family: "Source Sans Pro", Arial;
     font-size: 2rem;
     font-weight: 400;
+    max-width: 50rem;
     color: var(--color-text-primary);
 }
 
@@ -354,6 +355,11 @@ a {
 
 .no-bottom-border:hover::after {
     width: 0;
+}
+
+.menu-icon {
+    transition: transform 0.2s ease;
+    display: none;
 }
 
 .heading-accent {
@@ -540,11 +546,37 @@ a {
     position: fixed;
     bottom: 3.2rem;
     transition: transform 0.2s ease;
+    animation: pulseSlow 5s infinite;
+    opacity: 1;
+}
+
+
+@keyframes pulseSlow {
+    20% {
+        transform: scale(1.2);
+        transform: translateY(-10px);
+    }
+
+    40% {
+        transform: scale(1);
+        transform: translateY(0px);
+    }
+}
+
+@keyframes changeColor {
+    20% {
+        stroke: var(--color-primary-600);
+    }
+
+    40% {
+        stroke: var(--color-arrow);
+    }
 }
 
 .continue-arrow {
     stroke: var(--color-arrow);
     transform: stroke 0.2s ease;
+    animation: changeColor 5s infinite;
 }
 
 .continue-icon:hover {
@@ -575,6 +607,10 @@ a {
     font-weight: 700;
 }
 
+.rotate {
+    transform: rotate(-90deg);
+}
+
 /* ID STYLING */
 
 #main-div {
@@ -585,6 +621,18 @@ a {
     align-items: center;
 }
 
+#top-of-site-pixel-anchor {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    top: 300px;
+    left: 0;
+    background-color: var(--color-background);
+}
+
+body.header-not-at-top .continue-icon {
+    display: none;
+}
 
 /* Styling for slightly narrower screens */
 
@@ -603,10 +651,6 @@ a {
 /* Styling for narrow screens */
 
 @media screen and (max-width: 1100px) {
-    #landing-page {
-        background-color: red;
-    }
-
     p {
         font-size: 1.8rem;
     }
@@ -640,11 +684,11 @@ a {
     }
 
     .disease-heading {
-        font-size: 1.8rem;
+        font-size: 1.6rem;
     }
 
     .disease-text {
-        font-size: 1.6rem;
+        font-size: 1.8rem;
     }
 
     .disease-button {
@@ -656,13 +700,112 @@ a {
 /* Styling for mobile screens */
 
 @media screen and (max-width: 950px) {
-    #landing-page {
-        background-color: green;
+    .navbar-div {
+        margin-bottom: 3.2rem;
+    }
+
+    /* Make navbar responsive for mobile screens */
+    .navbar {
+        display: block;
+        position: relative;
+    }
+
+    .nav-div {
+        display: none;
+    }
+
+    .logo {
+        float: left;
+    }
+
+    .menu-icon {
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 2rem;
+    }
+
+    .responsive .nav-div {
+        display: block;
+        width: 100%;
+        padding: 0;
+        padding-top: 9.6rem;
+        margin: auto;
+    }
+
+    .responsive .nav-link {
+        display: block;
+        text-align: center;
+        margin: 0;
+    }
+
+    .responsive .nav-link:hover::after {
+        width: 0%;
+    }
+
+    .responsive .margin-right-medium {
+        margin-right: 0;
     }
 
     .layout {
         grid-template-columns: 1fr;
         justify-items: center;
-        align-items: end;
+        text-align: center;
+        align-items: center;
+    }
+
+    .left-side {
+        align-items: center;
+        margin-bottom: 6.4rem;
+    }
+
+    .right-side {
+        align-items: center;
+    }
+
+    .margin-bottom-small {
+        margin-bottom: 0.8rem;
+    }
+
+    .margin-bottom-medium {
+        margin-bottom: 1.6rem;
+    }
+
+    .margin-bottom-large {
+        margin-bottom: 3.2rem;
+    }
+
+    .margin-bottom-very-large {
+        margin-bottom: 6.4rem;
+    }
+
+    .margin-bottom-massive {
+        margin-bottom: 12.8rem;
+    }
+
+    .section-heading {
+        font-size: 4rem;
+    }
+
+    .disease-div {
+        grid-template: 
+            1fr
+            / 1fr;
+    }
+
+    .diseases-layout {
+        align-items: center;
+    }
+
+    .disease-card {
+        align-items: center;
+    }
+
+    .diseases-graphic-top-right {
+        display: none;
+    }
+
+    .diseases-graphic-bottom-left {
+        display: none;
     }
 }
