--- a/style.css
+++ b/style.css
@@ -392,22 +392,6 @@ a {
                 background-color 0.2s ease;
 }
 
-.contact-button:hover {
-    transform: translateY(-8px);
-    box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), /* 8dp - umbra */
-    0px 8px 10px 1px rgba(0, 0, 0, 0.14), /* 8dp - penumbra */
-    0px 3px 14px 2px rgba(0, 0, 0, 0.12); /* 8dp - ambient */
-    transition: box-shadow 0.2s ease, transform 0.2s ease, 
-                background-color 0.2s ease;
-}
-
-.contact-button:active {
-    box-shadow: none;
-    outline: none;
-    background-color: var(--color-background-contact-button-active);
-    transition: box-shadow 0.2s ease, background-color 0.2s ease;
-}
-
 .to-top-button {
     position: fixed;
     bottom: 3.2rem;
@@ -442,20 +426,6 @@ a {
     transition: box-shadow 0.2s ease, transform 0.2s ease;
 }
 
-.disease-button:hover {
-    transform: translateY(-8px);
-    box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), /* 8dp - umbra */
-    0px 8px 10px 1px rgba(0, 0, 0, 0.14), /* 8dp - penumbra */
-    0px 3px 14px 2px rgba(0, 0, 0, 0.12); /* 8dp - ambient */
-    transition: box-shadow 0.2s ease, transform 0.2s ease;
-}
-
-.disease-button:active {
-    box-shadow: none;
-    outline: none;
-    transition: box-shadow 0.2s ease;
-}
-
 .text-box {
     box-sizing: border-box;
     background-color: var(--color-background-text);
@@ -470,7 +440,7 @@ a {
     padding: 3.2rem;
     display: flex;
     flex-flow: column nowrap;
-    align-items: start;
+    align-items: flex-start;
     justify-content: center;
 }
 
@@ -581,16 +551,6 @@ a {
     stroke: var(--color-arrow);
     transform: stroke 0.2s ease;
     animation: change_color 5s infinite;
-}
-
-.continue-icon:hover {
-    transform: scale(1.1);
-    transition: transform 0.2s ease;
-}
-
-.continue-icon:hover .continue-arrow {
-    stroke: var(--color-arrow-hovered);
-    transform: stroke 0.2s ease;
 }
 
 /* UTILITY STYLES */
@@ -812,5 +772,53 @@ body.header-not-at-top .continue-icon {
 
     .diseases-graphic-bottom-left {
         display: none;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .title {
+        font-size: 3.6rem;
+    }
+}
+
+@media screen and (min-width: 500px) {
+    .contact-button:hover {
+        transform: translateY(-8px);
+        box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), /* 8dp - umbra */
+        0px 8px 10px 1px rgba(0, 0, 0, 0.14), /* 8dp - penumbra */
+        0px 3px 14px 2px rgba(0, 0, 0, 0.12); /* 8dp - ambient */
+        transition: box-shadow 0.2s ease, transform 0.2s ease, 
+                    background-color 0.2s ease;
+    }
+
+    .contact-button:active {
+        box-shadow: none;
+        outline: none;
+        background-color: var(--color-background-contact-button-active);
+        transition: box-shadow 0.2s ease, background-color 0.2s ease;
+    }
+
+    .disease-button:hover {
+        transform: translateY(-8px);
+        box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), /* 8dp - umbra */
+        0px 8px 10px 1px rgba(0, 0, 0, 0.14), /* 8dp - penumbra */
+        0px 3px 14px 2px rgba(0, 0, 0, 0.12); /* 8dp - ambient */
+        transition: box-shadow 0.2s ease, transform 0.2s ease;
+    }
+
+    .disease-button:active {
+        box-shadow: none;
+        outline: none;
+        transition: box-shadow 0.2s ease;
+    }
+
+    .continue-icon:hover {
+        transform: scale(1.1);
+        transition: transform 0.2s ease;
+    }
+
+    .continue-icon:hover .continue-arrow {
+        stroke: var(--color-arrow-hovered);
+        transform: stroke 0.2s ease;
     }
 }
