--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 
     /* Light background colors */
     --color-background: #FFFFFF;
+    --color-background-nav: #FFFFFF;
     --color-background-text: #EBF5FE;
     --color-background-contact-button: #FFFFFF;
     --color-background-landing-page: #FFFFFF;
@@ -26,8 +27,10 @@
     /* Light text colors */
     --color-text-primary: #232A3A; /* 14.34 contrast against FFF */
     --color-text-secondary: #54565D; /* 7.32 contrast against FFF */
+    --color-text-hovered: #656A75; /* 4.92 contrast against FFF */
     --color-link-hover: #2D4F9F;
     --color-text-white: #F5F6FA;
+    --color-text-white-hovered: #B5B6B9; /* 7.94 contrast against #212121 */
 
     /* Light component colors */
     --color-arrow: #7C7E82; /* 4.06 contrast against FFF */
@@ -42,6 +45,13 @@
 /* Dark mode colors */
 :root[color-mode="dark"] {
     --color-background: #040A17;
+}
+
+/* General variables not related to color */
+:root {
+
+    /* Font sizes */
+    --text-size-footer: 1.6rem;
 }
 
 /* TAG STYLING */
@@ -61,7 +71,7 @@ img {
 }
 
 p {
-    font-family: "Source Sans Pro", Arial;
+    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
     font-size: 2rem;
 }
 
@@ -96,7 +106,7 @@ a {
 
 .navbar-div {
     width: 100%;
-    background-color: var(--color-black);
+    background-color: var(--color-white);
     margin-bottom: 12.8rem;
 }
 
@@ -143,6 +153,10 @@ a {
 
 .align-start {
     align-items: start;
+}
+
+.align-center {
+    align-items: center;
 }
 
 .left-side {
@@ -267,14 +281,14 @@ a {
 /* Text styles */
 
 .section-heading {
-    font-family: "Source Serif Pro";
+    font-family: "Source Serif Pro", Georgia, 'Times New Roman', Times, serif;
     font-size: 6.4rem;
     font-weight: 700;
     color: var(--color-text-primary);
 }
 
 .section-subheading {
-    font-family: "Source Sans Pro";
+    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
     font-size: 3rem;
     font-weight: 400;
     color: var(--color-text-secondary);
@@ -287,17 +301,20 @@ a {
 }
 
 .normal-text {
-    font-family: "Source Sans Pro", Arial;
+    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
     font-size: 2rem;
     font-weight: 400;
     line-height: 1.5;
+    max-width: 56rem;
+    color: var(--color-text-primary);
 }
 
 .nav-link {
-    color: var(--color-text-white);
+    color: var(--color-text-primary);
     font-weight: 600;
     text-transform: uppercase;
-    letter-spacing: 0.05em;
+    letter-spacing: 0.08em;
+    font-size: 1.8rem;
 }
 
 .nav-link::after {
@@ -305,7 +322,7 @@ a {
     display: block;
     width: 0;
     height: 3px;
-    background: var(--color-primary-200);
+    background: var(--color-primary-900);
     transition: width 0.5s;
 }
 
@@ -314,14 +331,14 @@ a {
 }
 
 .find-card-section-heading {
-    font-family: "Source Sans Pro", Arial;
+    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
     font-size: 1.8rem;
     font-weight: 700;
     text-transform: uppercase;
 }
 
 .find-card-section-info {
-    font-family: "Source Sans Pro", Arial;
+    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
     font-size: 2rem;
     font-weight: 400;
 }
@@ -331,29 +348,50 @@ a {
     border-bottom: 2px solid var(--color-primary-900);
 }
 
-.footer-text {
-    color: var(--color-text-white);
+.telephone-link {
+    color: var(--color-text-primary);
+    border-bottom: 2px solid var(--color-text-primary);
+    transition: color 0.2s ease, border-bottom 0.2s ease;
 }
 
-.personal-page-link:visited {
+.telephone-link:hover {
+    color: var(--color-text-hovered);
+    border-bottom: 2px solid var(--color-background-text);
+}
+
+
+.footer-text {
     color: var(--color-text-white);
+    font-size: var(--text-size-footer);
+}
+
+.personal-page-link {
+    color: var(--color-text-white);
+    border-bottom: 2px solid var(--color-white);
+    transition: all 0.2s ease;
+}
+
+.personal-page-link:hover {
+    color: var(--color-text-white-hovered);
+    border-bottom: 2px solid var(--color-black);
 }
 
 .disease-heading {
-    font-family: "Source Sans Pro", Arial;
+    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
     font-size: 1.8rem;
     font-weight: 700;
     text-transform: uppercase;
-    letter-spacing: 0.05em;
+    letter-spacing: 0.08em;
     color: var(--color-text-primary);
 }
 
 .disease-text {
-    font-family: "Source Sans Pro", Arial;
+    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
     font-size: 2rem;
     font-weight: 400;
     max-width: 50rem;
     color: var(--color-text-primary);
+    line-height: 1.5;
 }
 
 /* Component styles */
@@ -375,11 +413,11 @@ a {
 }
 
 .contact-button {
-    font-family: "Source Sans Pro";
+    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
     font-size: 2rem;
     font-weight: 700;
     text-transform: uppercase;
-    letter-spacing: 0.05em;
+    letter-spacing: 0.08em;
     color: var(--color-primary-900);
     background-color: var(--color-background-contact-button);
     border: 4px solid var(--color-primary-900);
@@ -398,7 +436,7 @@ a {
     right: 3.2rem;
     height: 10rem;
     width: 10rem;
-    font-family: "Source Sans Pro", Arial;
+    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
     font-size: 1.8rem;
     font-weight: 700;
     background-color: var(--color-background);
@@ -408,11 +446,11 @@ a {
 }
 
 .disease-button {
-    font-family: "Source Sans Pro", Arial;
+    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
     font-size: 2rem;
     font-weight: 700;
     text-transform: uppercase;
-    letter-spacing: 0.05em;
+    letter-spacing: 0.08em;
     color: var(--color-primary-900);
     background-color: var(--color-background-contact-button);
     border: 4px solid var(--color-primary-900);
@@ -473,12 +511,10 @@ a {
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
-    font-family: "Source Sans Pro", Arial;
-    font-size: 2rem;
+    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
+    font-size: 3rem;
     font-weight: 400;
-    color: var(--color-text-white);
-    text-transform: uppercase;
-    letter-spacing: 0.08em;
+    color: var(--color-text-primary);
 }
 
 .about-background-color {
@@ -620,6 +656,10 @@ body.header-not-at-top .continue-icon {
         font-size: 1.8rem;
     }
 
+    .nav-link {
+        font-size: 1.6rem;
+    }
+
     .section-heading {
         font-size: 5rem;
     }
@@ -633,7 +673,7 @@ body.header-not-at-top .continue-icon {
     }
 
     .logo {
-        font-size: 1.8rem;
+        font-size: 2.5rem;
     }
 
     .contact-button {
@@ -687,7 +727,7 @@ body.header-not-at-top .continue-icon {
         display: block;
         position: absolute;
         right: 0;
-        top: 2rem;
+        top: 2.4rem;
     }
 
     .responsive .nav-div {
@@ -747,8 +787,16 @@ body.header-not-at-top .continue-icon {
         margin-bottom: 12.8rem;
     }
 
+    .padding-top-medium {
+        padding-top: 1.6rem;
+    }
+
     .section-heading {
         font-size: 4rem;
+    }
+
+    .find-text {
+        text-align: center;
     }
 
     .disease-div {
@@ -782,10 +830,6 @@ body.header-not-at-top .continue-icon {
     }
 
     .section-subheading {
-        text-align: center;
-    }
-
-    #find-page .normal-text {
         text-align: center;
     }
 }
