--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
     /* Light background colors */
     --color-background: #F5FBFF;
-    --color-background-nav: #F5FBFF;
+    --color-background-nav: rgba(245, 251, 255, 0.8);
     --color-background-text: #DEEDF8;
     --color-background-contact-button: #F5FBFF;
     --color-background-landing-page: #F5FBFF;
@@ -106,8 +106,15 @@ a {
 }
 
 .navbar-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     background-color: var(--color-background-nav);
+    position: fixed;
+    top: 0;
+    z-index: 3;
+    backdrop-filter: blur(8px);
 }
 
 .full-page {
@@ -511,6 +518,7 @@ a {
     border: 4px solid var(--color-primary-900);
     border-radius: 5px;
     padding: 1.6rem 3.2rem;
+    cursor: pointer;
     box-shadow:  0px 3px 1px -2px rgba(0, 0, 0, 0.2), /*  2dp - umbra */
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), /* 2dp - penumbra */
     0px 1px 5px 0px rgba(0, 0, 0, 0.12); /* 2dp - ambient */
@@ -791,6 +799,7 @@ a {
     display: flex;
     justify-content: center;
     width: 100%;
+    margin-top: calc(10.5rem + 12.8rem);
 }
 
 #landing-page .left-side {
@@ -979,6 +988,11 @@ body.header-not-at-top .continue-icon {
         font-size: 1.8rem;
     }
 
+    .logo img {
+        width: 4rem;
+        height: 4.9rem;
+    }
+
     .layout {
         grid-template-columns: 1fr;
         justify-items: center;
@@ -1022,8 +1036,20 @@ body.header-not-at-top .continue-icon {
         margin-bottom: 12.8rem;
     }
 
+    .padding-top-mini {
+        padding-top: 0.3rem;
+    }
+
+    .padding-top-small {
+        padding-top: 0.8rem;
+    }
+
     .padding-top-medium {
         padding-top: 1.6rem;
+    }
+
+    .padding-bottom-small {
+        padding-bottom: 0.8rem;
     }
 
     .section-heading {
@@ -1116,14 +1142,14 @@ body.header-not-at-top .continue-icon {
         align-items: center;
     }
 
-    .padding-top-mini {
-        padding-top: 0.3rem;
-    }
-
     #landing-page {
         height: auto;
         max-height: none;
         width: 90%;
+    }
+
+    #landing-page-background-div {
+        margin-top: calc(6.6rem + 3.2rem)
     }
 
     #landing-page .left-side {
