--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ html {
 
 body {
     margin: 0;
+    background-color: var(--color-background);
 }
 
 img {
@@ -716,6 +717,7 @@ a {
     animation: pulse_slow 5s infinite;
     opacity: 1;
     z-index: 2;
+    right: calc(50vw - 17px);
 }
 
 .continue-icon-responsive {
@@ -778,6 +780,22 @@ a {
 
 .center-text {
     text-align: center;
+}
+
+
+.fadeInUp {
+    animation: fadeInUp 0.8s ease;
+}
+
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(60px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 /* ID STYLING */
